untested jdk8 port